--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "capstone-travel-app",
     "version": "1.0.0",
-    "main": "app.js",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node src/server/index.js",
-        "build-prod": "webpack --config webpack.prod.js",
+        "build-prod": "webpack --config webpack.dev.js",
         "build-dev": "webpack serve --config webpack.dev.js --open"
     },
     "devDependencies": {
@@ -21,11 +21,13 @@
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^5.1.1",
-        "webpack": "^5.24.3",
-        "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2"
+        "webpack": "^5.39.0",
+        "webpack-cli": "^4.7.2",
+        "webpack-dev-server": "^4.0.0-beta.2"
     },
     "dependencies": {
-        "cors": "^2.8.5"
+        "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
+        "express": "^4.17.1"
     }
 }
