--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node src/server/index.js",
-        "build-prod": "webpack --config webpack.dev.js",
+        "build-prod": "webpack --config webpack.prod.js",
         "build-dev": "webpack serve --config webpack.dev.js --open"
     },
     "devDependencies": {
