updated .env file

--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-API_KEY_GEO = 
+API_KEY_WEATHER = da6552e214114d288d0d19870277f3a7
 
-API_KEY_WEATHER =
-
-API_KEY_PIX = 
+API_KEY_PIX = 22238697-c284ba5b1bd2156064c8f808e
