--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
         "terser-webpack-plugin": "^5.1.1",
         "webpack": "^5.39.0",
         "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "^4.0.0-beta.2"
+        "webpack-dev-server": "^4.0.0-beta.2",
+        "workbox-webpack-plugin": "^6.1.5"
     },
     "dependencies": {
         "body-parser": "^1.19.0",
