--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "start": "node src/server/index.js",
         "build-prod": "webpack --config webpack.prod.js",
         "build-dev": "webpack serve --config webpack.dev.js --open"
@@ -15,6 +15,7 @@
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.1.1",
         "html-webpack-plugin": "^5.2.0",
+        "jest": "^27.0.6",
         "mini-css-extract-plugin": "^1.3.9",
         "node-sass": "^5.0.0",
         "optimize-css-assets-webpack-plugin": "^5.0.4",
