--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "build-prod": "webpack --config webpack.prod.js",
         "build-dev": "webpack serve --config webpack.dev.js --open"
     },
+    "jest":{
+        "testEnvironment": "node"
+    },
     "devDependencies": {
         "@babel/core": "^7.13.8",
         "@babel/preset-env": "^7.13.9",
@@ -21,6 +24,7 @@
         "optimize-css-assets-webpack-plugin": "^5.0.4",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
+        "supertest": "^6.1.3",
         "terser-webpack-plugin": "^5.1.1",
         "webpack": "^5.39.0",
         "webpack-cli": "^4.7.2",
